--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build --base=/goit-advancedjs-hw-01/",
+    "build": "vite build --base=/goit-advancedjs-hw-01/src/index.html",
     "preview": "vite preview"
   },
   "devDependencies": {
